# MultiMQ

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  main.cc  main.cpp  multimq_broker.cc  multimq_partition.cc
include/: broker.h  broker_service.h  channel.h  channel_service.h  partition.h  partition_info.h  partition_service.h
lib/: broker.cc  broker_service.cc  channel.cc  partition.cc  partition_service.cc
proto/: broker.proto  channel.proto  hello.proto  partition.proto
